nationalacademies.org (archived on 2013-12-20)
{
  "alexa_rank": 197977,
  "analysis_subcorpus": true,
  "categories": "education;health",
  "char_count": 7129,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.08,
  "homepage_snapshot_redirected_domain": "nationalacademies.org",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20130928105623id_/http://www.nationalacademies.org/",
  "homepage_snapshot_url": "https://web.archive.org/web/20130928105623id_/http%3A//nationalacademies.org",
  "interval": "2013_B",
  "link_text": "Privacy Statement",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "nationalacademies.org",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131220213617id_/http%3A//www.nationalacademies.org/legal/privacy/index.html",
  "policy_title": "Privacy | National-Academies.org | Where the Nation Turns for Independent, Expert Advice",
  "policy_url": "nationalacademies.org/legal/privacy/index.html",
  "sha1": "8bfe971ab1df5ef74bd72ecf5a8ede2f731b1e01",
  "simhash": 16816207122991802837,
  "simhash_updated": true,
  "site_hostname": "nationalacademies.org",
  "site_url": "http://nationalacademies.org",
  "smog": 16.11,
  "strict_updated": true,
  "timestamp": "20131220213617",
  "word_count": 1147,
  "year": 2013
}

--- a/n/na/nat/nationalacademies.org.html
+++ b/n/na/nat/nationalacademies.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the nationalacademies.org privacy policy that was archived on 2013-06-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130628000121id_/http%3A//nationalacademies.org/legal/privacy/index.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the nationalacademies.org privacy policy that was archived on 2013-12-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131220213617id_/http%3A//www.nationalacademies.org/legal/privacy/index.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><script type="text/javascript">
    var _U = "undefined";
@@ -316,7 +316,7 @@ function linkToNative(contentID) {
 	   	   	   	   																<a href="http://sites.nationalacademies.org/DBASSE/index.htm" title="Behavioral and Social Sciences and Education">Behavioral and Social Sciences and Education</a>
   																			</li>
 	   	   	   	   															<li>
-	   	   	   	   																<a href="http://dels.nas.edu" title="Earth and Life Sciences">Earth and Life Sciences</a>
+	   	   	   	   																<a href="http://dels.nas.edu" title="Earth and Life Studies">Earth and Life Studies</a>
   																			</li>
 	   	   	   	   															<li>
 	   	   	   	   																<a href="http://sites.nationalacademies.org/deps" title="Engineering and Physical Sciences">Engineering and Physical Sciences</a>
@@ -328,7 +328,7 @@ function linkToNative(contentID) {
 	   	   	   	   																<a href="http://www.trb.org" title="Transportation Research Board">Transportation Research Board</a>
   																			</li>
 	   	   	   	   															<li>
-	   	   	   	   																<a href="../../nrc/na_070358.html" title="NRC Articles of Organization">NRC Articles of Organization</a>
+	   	   	   	   																<a href="http://www.nationalacademies.org/gulf/gulfprogram.html" title="Gulf Research&nbsp;Program">Gulf Research&nbsp;Program</a>
   																			</li>
 																</ul>
 															</li>
@@ -501,7 +501,7 @@ function linkToNative(contentID) {
 									document.write("<font color='000000' face='arial' size='2'><b>"+montharray[month]+" "+daym+", "+year+"</b></font>")
 									
 									// -->
-									</script><font color="000000" face="arial" size="2"><b>Feb. 24, 2020</b></font></div></div></td></tr></tbody></table></td></tr></tbody></table>
+									</script><font color="000000" face="arial" size="2"><b>Feb. 19, 2020</b></font></div></div></td></tr></tbody></table></td></tr></tbody></table>
 <!-- HEADER/BANNER END -->
 
 <!-- CONTENT AREA STARTS -->
