bluemic.com (archived on 2013-12-20)
{
  "alexa_rank": 82660,
  "analysis_subcorpus": true,
  "categories": "shopping",
  "char_count": 2466,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.56,
  "homepage_snapshot_redirected_domain": "bluemic.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20130930114907id_/http://bluemic.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20130930114907id_/http%3A//bluemic.com",
  "interval": "2013_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "bluemic.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131220232431id_/http%3A//bluemic.com/salesandsupport/privacy.html",
  "policy_title": "Blue Microphones | Privacy Policy",
  "policy_url": "bluemic.com/salesandsupport/privacy.html",
  "sha1": "92b04e7ac18758e0bc4999c76449e8e63c6493b6",
  "simhash": 10821606820876646884,
  "simhash_updated": false,
  "site_hostname": "bluemic.com",
  "site_url": "http://bluemic.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20131220232431",
  "word_count": 394,
  "year": 2013
}

--- a/b/bl/blu/bluemic.com.html
+++ b/b/bl/blu/bluemic.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the bluemic.com privacy policy that was archived on 2013-05-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130519200649id_/http%3A//bluemic.com/salesandsupport/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bluemic.com privacy policy that was archived on 2013-12-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131220232431id_/http%3A//bluemic.com/salesandsupport/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 
@@ -72,7 +72,7 @@
 	
 </style>
 
-<!--// DON'T FORGET TO UPDATE menu.xml FOR FLASH USERS //-->
+<!--// DON'T FORGET TO UPDATE THE BLOG NAVIGATION //-->
 
 <div id="navigation_swf">
 	<ul class="sf-menu sf-navbar">
@@ -263,8 +263,9 @@
 	
 	// DROPDOWN MENU
 	$('.sf-menu').superfish({ 
-		speed:      	'fast',	// faster animation speed 
-		autoArrows: 	false, 	// disable generation of arrow mark-up 
+		speed:         'fast', // speed of the opening animation
+		delay:         2000,                // the delay in milliseconds that the mouse can remain outside a submenu without it closing
+		autoArrows: 	false, 	 // disable generation of arrow mark-up 
 		dropShadows:   	false
 	});
 	
