--- a/c/cu/cut/cutleryandmore.com.html
+++ b/c/cu/cut/cutleryandmore.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the cutleryandmore.com privacy policy that was archived on 2013-06-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130620160702id_/http%3A//www.cutleryandmore.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cutleryandmore.com privacy policy that was archived on 2013-12-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131221000623id_/http%3A//www.cutleryandmore.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -45,7 +45,8 @@
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tbody><tr>
     <td align="center" valign="top">
-      <div id="Menu1">
+      
+<div id="Menu1">
   <table border="0" cellpadding="0" cellspacing="0" class="menu_drop" onmouseover="KillAnimation(1);" onmouseout="StartHide(1);">
     <tbody><tr><td><a href="/boning.htm">Boning &amp; Fillet Knives</a></td></tr>
     <tr><td><a href="/bread.htm">Bread Knives</a></td></tr>
@@ -121,9 +122,9 @@
 	<tr><td><a href="/toasters.htm">Toasters</a></td></tr>
 	<tr><td><a href="/waffle-makers.htm">Waffle Makers</a></td></tr>
     <tr><td class="section_header"><a href="/electrics.htm" alt="Small Appliances" title="Small Appliances">Featured Brands (See All)</a></td></tr>
-    <tr><td><a href="/bamix">Bamix Immersion Blenders</a></td></tr>
-    <tr><td><a href="/breville.htm">Breville</a></td></tr>
-    <tr><td><a href="/omega">Omega Juicers</a></td></tr>
+    <tr><td><a href="/all-clad/small-appliances">All-Clad Electrics</a></td></tr>
+    <tr><td><a href="/beaba">Beaba Baby Food Makers</a></td></tr>
+    <tr><td><a href="/breville.htm">Breville Small Appliances</a></td></tr>
     <tr><td><a href="/vitamix">Vitamix Blenders</a></td></tr>
   </tbody></table>
 </div>
@@ -189,7 +190,6 @@
 	<tr><td><a href="/electric-kettles.htm">Electric Kettles</a></td></tr>
 	<tr><td><a href="/espresso-machines.htm">Espresso Machines</a></td></tr>
 	<tr><td><a href="/french-presses">French Presses</a></td></tr>
-	<tr><td><a href="/stove-top-espresso-makers">Stove Top Espresso Makers</a>&nbsp;</td></tr>
 	<tr><td><a href="/tea-infusers">Tea Infusers</a></td></tr>
 	<tr><td><a href="/teakettles.htm">Tea Kettles</a></td></tr>
     <tr><td class="section_header"><a href="/coffee-tea-espresso" alt="Coffee Makers" title="Coffee Makers">Featured Brands (See All)</a></td></tr>
@@ -257,7 +257,6 @@
 	  <tbody><tr>
 	    <td align="left" valign="middle"><a id="Popup_EmailCollect" href="/email_collect.asp">Join Our Mailing List</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/about_us.asp">About Us</a>
 		&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/cutleryand"><strong>cutlery</strong>and ...much more</a>
-		
 		</td>
 		<td align="right" valign="middle"><a href="/help">Contact Us</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/order-status">Order Tracking</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/cart?sc=top">Shopping Cart</a>&nbsp;<strong>(<span id="CartItems">&nbsp;</span>)</strong></td>
 	    <td width="132" align="right"><a href="/cart?co=top"><img src="/images/top_nav/checkout.png" border="0" style="padding-top:2px;padding-bottom:2px;"></a></td>
@@ -269,19 +268,15 @@
   <tbody><tr height="80">
     <td class="logo_cell"><a href="http://www.cutleryandmore.com" title="Shop Cookware, Kitchen Knives, Coffee Makers &amp; More"><img src="/images/top_nav/logo.jpg" width="300" height="46" border="0" alt="Shop Wusthof Knives, Henckels, All-Clad Cookware &amp; Le Creuset"></a></td>
     <td class="marquee_cell">
-
-		<div class="fb-like-box" data-href="http://www.facebook.com/cutleryandmore" data-width="292" data-show-faces="false" data-stream="false" data-header="true"></div>
-
+<a href="/lequip/coway-juicepresso-vertical-slow-juicer-p127552"><img src="/images/top_nav/gift_of_the_day.png" border="0"></a>
 	</td>
 	<td class="search_cell" align="right"><img src="/images/top_nav/phone_number.jpg" border="0" style="padding-bottom:4px;">
-	  <form id="SearchForm" action="/search" method="post" onsubmit="return doSearch(0)" autocomplete="off">
-        <table cellpadding="0" cellspacing="0" class="search_table" id="search_box">
-          <tbody><tr>
-            <td><input name="SearchField" type="text" id="SearchField" value="Search" onfocus="ClearSearchBox(this,'Search');" autocomplete="off"></td>
-            <td class="search_icon" onclick="doSearch(1)"><img src="/images/top_nav/search.png" width="15" height="15"></td>
-          </tr>
-        </tbody></table>
-	  </form>
+      <table cellpadding="0" cellspacing="0" class="search_table" id="search_box">
+        <tbody><tr>
+          <td><input name="SearchField" type="text" id="SearchField" value="Search" onfocus="ClearSearchBox(this,'Search');" onkeypress="if(event.keyCode==13){productSearch();}" autocomplete="off"></td>
+          <td class="search_icon" onclick="productSearch();"><img src="/images/top_nav/search.png" width="15" height="15"></td>
+        </tr>
+      </tbody></table>
     </td>
   </tr>
   <tr>
@@ -317,11 +312,11 @@
   <tr class="promo_bar_spacer"><td colspan="3"></td></tr>
   <tr>
     <td colspan="2" class="promo_bar">
-<a href="/shipping"><img src="/images/top_nav/promo_bar/free_shipping.png" border="0"></a></td>
+<a href="/shipping"><img src="/images/top_nav/promo_bar/christmas_2nd_day.png" border="0"></a></td>
 	<td class="shop_by_brand">
 	  <select onchange="window.location = this.value;">
         <option value="/">Shop by Brand</option>
-<option value="/allclad.htm">All-Clad</option><option value="/bakers-edge-brownie.htm">Baker's Edge</option><option value="/bamix">Bamix</option><option value="/benriner.htm">Benriner</option><option value="/borner.htm">Borner</option><option value="/bosch">Bosch</option><option value="/breville.htm">Breville</option><option value="/calphalon.htm">Calphalon</option><option value="/capresso.htm">Capresso</option><option value="/catskill">Catskill</option><option value="/cdn.htm">CDN</option><option value="/charcoal-companion">Charcoal Companion</option><option value="/chefn">Chef'n</option><option value="/chefschoice.htm">Chef's Choice</option><option value="/chicago.htm">Chicago Cutlery</option><option value="/chicago-metallic">Chicago Metallic</option><option value="/chroma.htm">Chroma</option><option value="/coleandmason.htm">Cole &amp; Mason</option><option value="/cuisinart.htm">Cuisinart</option><option value="/cuisipro.htm">Cuisipro</option><option value="/cutlery-and-more">Cutlery and More</option><option value="/de-buyer">de Buyer</option><option value="/demeyere">Demeyere</option><option value="/doughmakers.htm">Doughmakers</option><option value="/dovo">Dovo</option><option value="/duralex">Duralex</option><option value="/edgeware">Edgeware</option><option value="/emerilware.htm">Emerilware</option><option value="/emile-henry">Emile Henry</option><option value="/enclume">Enclume</option><option value="/epicurean.htm">Epicurean</option><option value="/fagor.htm">Fagor</option><option value="/fissler.htm">Fissler</option><option value="/forschner_knives.htm">Forschner</option><option value="/furi.htm">Furi</option><option value="/global.htm">Global Knives</option><option value="/henckels.htm">Henckels</option><option value="/hurom">Hurom</option><option value="/isi">iSi</option><option value="/jk-adams">J.K. Adams</option><option value="/jaccardmeat.htm">Jaccard</option><option value="/boos.htm">John Boos</option><option value="/joseph-joseph">Joseph Joseph</option><option value="/joyce-chen">Joyce Chen</option><option value="/capresso.htm">Jura-Capresso</option><option value="/kaiser">Kaiser</option><option value="/krups.htm">Krups</option><option value="/kuhn_rikon.htm">Kuhn Rikon</option><option value="/kyocera.htm">Kyocera</option><option value="/lequip">L'Equip</option><option value="/lecreuset.htm">Le Creuset</option><option value="/lekue">Lekue</option><option value="/lello">Lello</option><option value="/mac.htm">MAC Knives</option><option value="/pasta.htm">Marcato</option><option value="/mario-batali">Mario Batali</option><option value="/masahiro.htm">Masahiro</option><option value="/mastrad">Mastrad</option><option value="/mauviel.htm">Mauviel</option><option value="/messermeister_store.htm">Messermeister</option><option value="/microplane.htm">Microplane</option><option value="/henckels/miyabi.htm">Miyabi</option><option value="/mundial.htm">Mundial</option><option value="/musso">Musso</option><option value="/nespresso">Nespresso</option><option value="/nordicware.htm">NordicWare</option><option value="/norton.htm">Norton</option><option value="/omega">Omega</option><option value="/outset">Outset</option><option value="/oxogrips.htm">Oxo</option><option value="/peugeot.htm">Peugeot</option><option value="/pizzacraft">Pizzacraft</option><option value="/rachael_ray.htm">Rachael Ray</option><option value="/rosle.htm">Rosle</option><option value="/salter.htm">Salter</option><option value="/scanpan.htm">Scanpan</option><option value="/shun-knives.htm">Shun Knives</option><option value="/demarle-silpat">Silpat</option><option value="/sousvide-supreme">SousVide Supreme</option><option value="/staub">Staub</option><option value="/steven-raichlen">Steven Raichlen</option><option value="/swiss-diamond.htm">Swiss Diamond</option><option value="/swissmar">Swissmar</option><option value="/tamahagane">Tamahagane</option><option value="/taylor.htm">Taylor</option><option value="/tojiro">Tojiro</option><option value="/totally-bamboo">Totally Bamboo</option><option value="/tramontina">Tramontina</option><option value="/usa-pans">USA Pans</option><option value="/forschner_knives.htm">Victorinox Forschner</option><option value="/viking.htm">Viking</option><option value="/vitamix">Vitamix</option><option value="/waring">Waring</option><option value="/wellness-mats">Wellness Mats</option><option value="/wmf">WMF</option><option value="/wusthof.htm">Wusthof</option><option value="/zojirushi.htm">Zojirushi</option><option value="/zoku">Zoku</option><option value="/henckels.htm">Zwilling J.A. Henckels</option><option value="/zyliss.htm">Zyliss</option>
+<option value="/allclad.htm">All-Clad</option><option value="/bakers-edge-brownie.htm">Baker's Edge</option><option value="/bamix">Bamix</option><option value="/beaba">Beaba</option><option value="/benriner.htm">Benriner</option><option value="/borner.htm">Borner</option><option value="/bosch">Bosch</option><option value="/breville.htm">Breville</option><option value="/calphalon.htm">Calphalon</option><option value="/capresso.htm">Capresso</option><option value="/cdn.htm">CDN</option><option value="/charcoal-companion">Charcoal Companion</option><option value="/chefschoice.htm">Chef's Choice</option><option value="/chicago.htm">Chicago Cutlery</option><option value="/chicago-metallic">Chicago Metallic</option><option value="/chroma.htm">Chroma</option><option value="/coleandmason.htm">Cole &amp; Mason</option><option value="/cuisinart.htm">Cuisinart</option><option value="/cuisipro.htm">Cuisipro</option><option value="/cutlery-and-more">Cutlery and More</option><option value="/dansk">Dansk</option><option value="/de-buyer">de Buyer</option><option value="/demeyere">Demeyere</option><option value="/doughmakers.htm">Doughmakers</option><option value="/dovo">Dovo</option><option value="/duralex">Duralex</option><option value="/emerilware.htm">Emerilware</option><option value="/emile-henry">Emile Henry</option><option value="/enclume">Enclume</option><option value="/epicurean.htm">Epicurean</option><option value="/fagor.htm">Fagor</option><option value="/fissler.htm">Fissler</option><option value="/forschner_knives.htm">Forschner</option><option value="/global.htm">Global Knives</option><option value="/henckels.htm">Henckels</option><option value="/hurom">Hurom</option><option value="/jk-adams">J.K. Adams</option><option value="/jaccardmeat.htm">Jaccard</option><option value="/boos.htm">John Boos</option><option value="/joseph-joseph">Joseph Joseph</option><option value="/joyce-chen">Joyce Chen</option><option value="/jura">Jura</option><option value="/kaiser">Kaiser</option><option value="/ken-onion-by-chef-works">Ken Onion by Chef Works</option><option value="/krups.htm">Krups</option><option value="/kuhn_rikon.htm">Kuhn Rikon</option><option value="/kyocera.htm">Kyocera</option><option value="/lequip">L'Equip</option><option value="/lamsonsharp">LamsonSharp</option><option value="/lecreuset.htm">Le Creuset</option><option value="/lekue">Lekue</option><option value="/lello">Lello</option><option value="/mac.htm">MAC Knives</option><option value="/pasta.htm">Marcato</option><option value="/mario-batali">Mario Batali</option><option value="/masahiro.htm">Masahiro</option><option value="/mauviel.htm">Mauviel</option><option value="/messermeister_store.htm">Messermeister</option><option value="/microplane.htm">Microplane</option><option value="/henckels/miyabi.htm">Miyabi</option><option value="/mundial.htm">Mundial</option><option value="/musso">Musso</option><option value="/nambe">Nambe</option><option value="/nespresso">Nespresso</option><option value="/nordicware.htm">NordicWare</option><option value="/norton.htm">Norton</option><option value="/omega">Omega</option><option value="/opinel">Opinel</option><option value="/outset">Outset</option><option value="/oxogrips.htm">Oxo</option><option value="/peugeot.htm">Peugeot</option><option value="/pizzacraft">Pizzacraft</option><option value="/rosle.htm">Rosle</option><option value="/rsvp">RSVP</option><option value="/salter.htm">Salter</option><option value="/scanpan.htm">Scanpan</option><option value="/shun-knives.htm">Shun Knives</option><option value="/sousvide-supreme">SousVide Supreme</option><option value="/staub">Staub</option><option value="/steven-raichlen">Steven Raichlen</option><option value="/swiss-diamond.htm">Swiss Diamond</option><option value="/swissmar">Swissmar</option><option value="/tamahagane">Tamahagane</option><option value="/taylor.htm">Taylor</option><option value="/tojiro">Tojiro</option><option value="/totally-bamboo">Totally Bamboo</option><option value="/tramontina">Tramontina</option><option value="/usa-pans">USA Pans</option><option value="/forschner_knives.htm">Victorinox Forschner</option><option value="/viking.htm">Viking</option><option value="/vitamix">Vitamix</option><option value="/waring">Waring</option><option value="/wellness-mats">Wellness Mats</option><option value="/wmf">WMF</option><option value="/wusthof.htm">Wusthof</option><option value="/zojirushi.htm">Zojirushi</option><option value="/henckels.htm">Zwilling J.A. Henckels</option><option value="/zyliss.htm">Zyliss</option>
       </select>
 	</td>
   </tr>
@@ -386,7 +381,7 @@
         </tbody></table></td>
   </tr>
 </tbody></table>
-<center><font size="2" face="Tahoma, Geneva, sans-serif"><strong>Have questions or need assistance? Call 1.800.650.9866</strong><br>Monday to Friday 9am - 5pm CST<br>Saturday 10am - 2pm CST</font></center><br>
+<center><font size="2" face="Tahoma, Geneva, sans-serif"><strong>Have questions or need assistance? Call 1.800.650.9866</strong><br>Monday to Friday 8am - 8pm CST<br>Saturday &amp; Sunday 9am - 3pm CST</font></center><br>
 <table class="footer" width="100%" border="0" cellspacing="0" cellpadding="0">
   <tbody><tr><td height="26" align="center">
     <table class="footer_links" width="980" border="0" cellspacing="0" cellpadding="0">
