--- a/s/sa/san/sandicor.com.html
+++ b/s/sa/san/sandicor.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the sandicor.com privacy policy that was archived on 2013-06-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130621001109id_/http%3A//www.sandicor.com/about/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the sandicor.com privacy policy that was archived on 2013-12-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131221000708id_/http%3A//www.sandicor.com/about/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -130,13 +130,13 @@
       <li id="updates_tab" class="ui-state-default ui-corner-top"><a href="#updates">Updates</a></li>
       <li id="news_tab" class="ui-state-default ui-corner-top"><a href="#news">News</a></li>
     </ul>
-    <div id="hot-topics" class="news_feed ui-tabs-panel ui-widget-content ui-corner-bottom"> <p><span style="color:#FCBE0C; position:relative; top:0px;">•</span>&nbsp;NewHome Source Professional  - <a href="../blog/hot-topics/NewHome-Source-Professional.html" title="NewHome Source Professional">more</a></p><p><span style="color:#FCBE0C; position:relative; top:0px;">•</span>&nbsp;REALIST Browser Error Page "You do not appear..."  - <a href="../blog/hot-topics/REALIST-Browser-Error-Page-You-do-not-appear....html" title="REALIST Browser Error Page " you="" do="" not="" appear...""="">more</a></p>
+    <div id="hot-topics" class="news_feed ui-tabs-panel ui-widget-content ui-corner-bottom"> <p><span style="color:#FCBE0C; position:relative; top:0px;">•</span>&nbsp;Annual Sentrilock Key Fee Billing  - <a href="../blog/hot-topics/Annual-Sentrilock-Key-Fee-Billing.html" title="Annual Sentrilock Key Fee Billing">more</a></p><p><span style="color:#FCBE0C; position:relative; top:0px;">•</span>&nbsp;A NEW MLS system is coming!  - <a href="../blog/hot-topics/A-NEW-MLS-system-is-coming.html" title="A NEW MLS system is coming!">more</a></p>
       <div style="float:right; margin-right:25px; position:relative; top:-px;"><a style="font-size:11px;color:#FCBE0C;" href="/blog/hot-topics/"><strong>View All Hot Topics</strong></a></div>
     </div>
     <div id="updates" class="news_feed ui-tabs-panel ui-widget-content ui-corner-bottom ui-tabs-hide"> <p><span style="color:#FCBE0C; position:relative; top:0px;">•</span>&nbsp;Understanding Realist Foreclosure Data  - <a href="../blog/updates/Understanding-Realist-Foreclosure-Data.html" title="Understanding Realist Foreclosure Data">more</a></p><p><span style="color:#FCBE0C; position:relative; top:0px;">•</span>&nbsp;Realist.com is unavailable every weekend from Saturday 7:00 p.m. through Sunday 7:00 a.m. for scheduled maintenance  - <a href="../blog/updates/realist-weekly-scheduled-maintenance.html" title="Realist Weekly Scheduled Maintenance ">more</a></p>
       <div style="float:right; margin-right:25px; position:relative; top:-1px;"><a style="font-size:11px;color:#FCBE0C;" href="/blog/updates/"><strong>View All Updates</strong></a></div>
     </div>
-    <div id="news" class="news_feed ui-tabs-panel ui-widget-content ui-corner-bottom ui-tabs-hide"> <p><span style="color:#FCBE0C; position:relative; top:0px;">•</span>&nbsp;September 2011 Newsletter  - <a href="../blog/news/September-2011-Newsletter.html" title="September 2011 Newsletter">more</a></p><p><span style="color:#FCBE0C; position:relative; top:0px;">•</span>&nbsp;Some of our most popular Tempo online webinar classes led by a live Sandicor trainer are scheduled for the near future.  - <a href="../blog/news/upcoming-free-Webinars.html" title="Upcoming Free Webinars">more</a></p>
+    <div id="news" class="news_feed ui-tabs-panel ui-widget-content ui-corner-bottom ui-tabs-hide"> <p><span style="color:#FCBE0C; position:relative; top:0px;">•</span>&nbsp;Some of our most popular Tempo online webinar classes led by a live Sandicor trainer are scheduled for the near future.  - <a href="../blog/news/upcoming-free-Webinars.html" title="Upcoming Free Webinars">more</a></p>
       <div style="float:right; margin-right:25px; position:relative; top:-1px;"><a style="font-size:11px;color:#FCBE0C;" href="/blog/news/"><strong>View All News</strong></a></div>
     </div>
   </div>
