--- a/s/so/soc/soccerclips.net.html
+++ b/s/so/soc/soccerclips.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the soccerclips.net privacy policy that was archived on 2013-05-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130515025750id_/http%3A//www.soccerclips.net/pageinfo/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the soccerclips.net privacy policy that was archived on 2013-12-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131221005955id_/http%3A//www.soccerclips.net/pageinfo/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://www.facebook.com/2008/fbml" xmlns:og="http://opengraph.org/schema/"><head>
 	
@@ -261,12 +261,10 @@
 		<div class="ftr_column">
 			<h3>Our Friends</h3>
 			<ul id="ftr_frnds">
-				<li><a href="http://www.frendice.hr/">Frendice</a></li>
-				<li><a href="http://www.igrice123igre.com">Igre</a></li>
-				<li><a href="http://www.whatispsychology.biz/" title="What is Psychology?">What is Psychology?</a></li>
 				<li><a href="http://poganjalci.weebly.com">Poganjalci</a></li>
 				<li><a href="http://www.dreevoo.com/en">Online knowledge sharing and learning made for people.</a></li>
 				<li><a href="http://www.whatispsychology.biz/about-stroop-effect-definition">Stroop Effect</a></li>
+				<li><a href="http://www.servisvesmasina.com/">Servis ves masina</a></li>
 			</ul>
 		</div>
 		
@@ -279,7 +277,7 @@
 				<li><a href="/pageinfo/contact">Banner Advertising</a></li>
 				<li><a href="/pageinfo/contact">Store Advertising</a></li>
 				<li><a href="/pageinfo/contact">Contact us</a></li>
-				<li><a href="http://www.remedies-for-pimples.net/">Remedies for pimples</a></li>
+				
 			</ul>
 		</div>
 		
