--- a/n/ne/net/netexpress.co.in.html
+++ b/n/ne/net/netexpress.co.in.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the netexpress.co.in privacy policy that was archived on 2013-06-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130622030954id_/http%3A//netexpress.co.in/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the netexpress.co.in privacy policy that was archived on 2013-12-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131221010109id_/http%3A//netexpress.co.in/privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Language" content="en-us">
@@ -439,6 +439,22 @@ suggestions</b> regarding our privacy policy, please contact us at </font><font 
                       
                     </tbody></table>
 
+<table border="0" cellpadding="0" cellspacing="1" width="800" bgcolor="#FFffff">
+  <tbody><tr>
+    <td width="100%" valign="middle" align="center" bgcolor="#FFffff">
+<script type="text/javascript"><!--
+google_ad_client = "ca-pub-2098772783176917";
+/* bottom728x90 */
+google_ad_slot = "8563025205";
+google_ad_width = 728;
+google_ad_height = 90;
+//-->
+</script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+</td>
+  </tr>
+</tbody></table>
 <table border="0" cellpadding="0" cellspacing="0" width="800">
 <tbody>
 <tr>
