--- a/p/pr/pro/procamrunning.in.html
+++ b/p/pr/pro/procamrunning.in.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the procamrunning.in privacy policy that was archived on 2013-06-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130621004347id_/http%3A//procamrunning.in/PRIVACY-POLICY) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the procamrunning.in privacy policy that was archived on 2013-12-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131221010122id_/http%3A//www.procamrunning.in/PRIVACY-POLICY) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 		<title>Procamrunning Official Site - Privacy Policy</title>
@@ -135,18 +135,16 @@
 	</div>
 	<div class="clear"></div>
 	<div class="navigation left">
-<ul class="left" id="navbar" style="overflow:hidden;"><li id="mlp_navigation_1" class=""><a href="http://www.procamrunning.in/ABOUT-US">about us</a></li><li id="mlp_navigation_2" class=""><a href="http://www.procamrunning.in/ASSOCIATION-OPPORTUNITIES">association opportunities</a></li><li id="mlp_navigation_3" class=""><a href="http://www.procamrunning.in/RUNNING-EVENTS">running events</a></li><li id="mlp_navigation_4" class=""><a href="http://www.procamrunning.in/TRAINING-PLAN">training</a><ul><li><a href="http://www.procamrunning.in/PACE-CALCULATOR">pace calculator</a></li><li><a href="http://www.procamrunning.in/PACE-WRISTBAND-CREATOR">pace wristband creator</a></li><li><a href="http://www.procamrunning.in/MARATHON-TRAINING-PLAN">marathon training plan</a></li><li><a href="http://www.procamrunning.in/HM-TRAINING-PLAN">half marathon training plan</a></li><li class="rmBottomBdr"><a href="http://www.procamrunning.in/10K-TRAINING-PLAN">10k run training plan</a></li></ul></li><li id="mlp_navigation_6" class=""><a href="http://www.procamrunning.in/Articles-Section">articles</a></li><li id="mlp_navigation_7" class=""><a href="http://www.procamrunning.in/forum/Community">communities</a></li><li id="mlp_navigation_8" class=" nobdr"><a href="http://www.procamrunning.in/Photogallery">gallery</a></li></ul></div></div>
+<ul style="overflow:hidden;" id="navbar" class="left"><li class="" id="mlp_navigation_1"><a href="http://www.procamrunning.in/ABOUT-US">about us</a></li><li class="" id="mlp_navigation_2"><a href="http://www.procamrunning.in/ASSOCIATION-OPPORTUNITIES">association opportunities</a></li><li class="" id="mlp_navigation_3"><a href="http://www.procamrunning.in/RUNNING-EVENTS">running events</a></li><li class="" id="mlp_navigation_4"><a href="http://www.procamrunning.in/TRAINING-PLAN">training</a><ul><li><a href="http://www.procamrunning.in/PACE-CALCULATOR">pace calculator</a></li><li><a href="http://www.procamrunning.in/PACE-WRISTBAND-CREATOR">pace wristband creator</a></li><li><a href="http://www.procamrunning.in/MARATHON-TRAINING-PLAN">marathon training plan</a></li><li><a href="http://www.procamrunning.in/HM-TRAINING-PLAN">half marathon training plan</a></li><li class="rmBottomBdr"><a href="http://www.procamrunning.in/10K-TRAINING-PLAN">10k run training plan</a></li></ul></li><li class="" id="mlp_navigation_6"><a href="http://www.procamrunning.in/Articles-Section">articles</a></li><li class="" id="mlp_navigation_7"><a href="http://www.procamrunning.in/forum/Community">communities</a></li><li class=" nobdr" id="mlp_navigation_8"><a href="http://www.procamrunning.in/Photogallery">gallery</a></li></ul>
+</div></div>
 <div id="loginerror">
 </div>	
 <div class="clear"></div>
 			<div class="events">
-												<a href="http://tcsworld10k.procamrunning.in">
-		<img alt="MLP WORLD10K logo" src="http://procamrunning.in/ugc/upload//4ed5a97f1c6c670017737e5642f43908.jpg" class="topMargin marginRt"></a>								<a href="http://scmm.procamrunning.in">
-		<img alt="MLP SCMM Logo" src="http://procamrunning.in/ugc/upload//6c61d47bd55935e6b238b8980f4940d2.gif" class="topMargin marginRt"></a>								<a href="http://adhm.procamrunning.in/">
-		<img alt="Adhm 2013 logo" src="http://procamrunning.in/ugc/upload/f6a42985dc3dd35efff90253c97d47ec.jpg" class="topMargin marginRt"></a>								<a href="&#10; http://www.procamrunning.in/jambacloudhyd10k/&#10;">
-		<img alt="
- hyd logo mlp 
-" src="&#10;&#10;http://procamrunning.in/ugc/upload//d8e7a4edf90ec6cd2702abcb02c1e6a5.gif&#10;&#10;" class="topMargin right"></a>			</div>
+												<a href="http://www.procamrunning.in/adhm/">
+		<img alt="adhm dated logo" src="http://procamrunning.in/ugc/upload//53e9e4f6c22324c474df7db7946672e9.gif" class="topMargin marginRt"></a>								<a href="http://scmm.procamrunning.in">
+		<img alt="MLP SCMM Logo" src="http://procamrunning.in/ugc/upload//2735e06c2b65dd5ca595c577343a1e91.gif" class="topMargin marginRt"></a>								<a href="http://tcsworld10k.procamrunning.in">
+		<img alt="MLP WORLD10K logo" src="http://procamrunning.in/ugc/upload//4ed5a97f1c6c670017737e5642f43908.jpg" class="topMargin right"></a>			</div>
 			<div class="leftPane" id="insideLeft">
 				<h1 id="MyAnchor">Privacy Policy</h1><div class="contentBox"><p>Procam International Ltd. ("Procam") recognizes that its visitors, users, and others who use <strong style="text-decoration:underline;"><a href="http://www.procamrunning.in">www.procamrunning.in</a></strong> value their privacy. This Privacy Notice details important information regarding the use and disclosure of user information collected on via the <strong style="text-decoration:underline;"><a href="http://www.procamrunning.in">www.procamrunning.in</a></strong> website. It provides this Privacy Notice to help you make an informed decision about whether to use or continue using <strong style="text-decoration:underline;"><a href="http://www.procamrunning.in">www.procamrunning.in</a></strong></p>
 
