--- a/d/de/des/deshigreetings.com.html
+++ b/d/de/des/deshigreetings.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the deshigreetings.com privacy policy that was archived on 2013-05-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130529195545id_/http%3A//deshigreetings.com/privacyPolcy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the deshigreetings.com privacy policy that was archived on 2013-12-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131221024642id_/http%3A//www.deshigreetings.com/privacyPolcy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 
@@ -346,14 +346,14 @@ swfobject.registerObject("FlashID");
 <div style="width:490px; height: 280px; float:left">
 
 <div style=" width::490px ; height:305px; border: 1px solid #999999;">
- <div class="style4" style="width:490px; height:auto;   border:0px;  float:right; height:20px; background-color:#CEF3FF; text-align:center">New Mother's Day  Collection 
+ <div class="style4" style="width:490px; height:auto;   border:0px;  float:right; height:20px; background-color:#CEF3FF; text-align:center">New Arrival 2013
  </div>
  <div style="width:6px; height: 260px; float:left "></div>
- <div style="width:155px; height: 260px; float:left "><a href="http://www.deshigreetings.com/productDetails.php?cid=9&amp;scid=151&amp;sscid=376&amp;ssscid=&amp;hs=240&amp;myty=sscID&amp;sb=&amp;sbkey=&amp;colco=&amp;rowPerPage=32&amp;showPage=&amp;ob=rank&amp;sor=DESC&amp;pid=17844"><img src="images/neweid-5.jpg" width="155" height="260" border="0"></a></div>
+ <div style="width:155px; height: 260px; float:left "><a href="http://www.deshigreetings.com/productDetails.php?cid=9&amp;scid=166&amp;sscid=473&amp;ssscid=&amp;hs=240&amp;myty=sscID&amp;sb=&amp;sbkey=&amp;colco=&amp;rowPerPage=32&amp;showPage=&amp;ob=rank&amp;sor=DESC&amp;pid=18050"><img src="images/neweid-5.jpg" width="155" height="260" border="0"></a></div>
  <div style="width:6px; height: 260px; float:left "></div>
- <div style="width:155px; height: 260px; float:left "><a href="http://www.deshigreetings.com/productDetails.php?cid=9&amp;scid=151&amp;sscid=376&amp;ssscid=&amp;hs=240&amp;myty=sscID&amp;sb=&amp;sbkey=&amp;colco=&amp;rowPerPage=32&amp;showPage=&amp;ob=rank&amp;sor=DESC&amp;pid=17832"><img src="images/neweid-6.jpg" width="155" height="260" border="0"></a></div>
+ <div style="width:155px; height: 260px; float:left "><a href="http://www.deshigreetings.com/productDetails.php?cid=9&amp;scid=151&amp;sscid=376&amp;ssscid=&amp;hs=240&amp;myty=sscID&amp;sb=&amp;sbkey=&amp;colco=&amp;rowPerPage=32&amp;showPage=&amp;ob=rank&amp;sor=DESC&amp;pid=17872"><img src="images/neweid-6.jpg" width="155" height="260" border="0"></a></div>
  <div style="width:6px; height: 260px; float:left "></div>
- <div style="width:155px; height: 260px; float:left "><a href="http://www.deshigreetings.com/productDetails.php?cid=9&amp;scid=151&amp;sscid=376&amp;ssscid=&amp;hs=240&amp;myty=sscID&amp;sb=&amp;sbkey=&amp;colco=&amp;rowPerPage=32&amp;showPage=&amp;ob=rank&amp;sor=DESC&amp;pid=17842"><img src="images/neweid-7.jpg" width="155" height="260" border="0"></a></div>
+ <div style="width:155px; height: 260px; float:left "><a href="http://www.deshigreetings.com/productDetails.php?cid=9&amp;scid=151&amp;sscid=376&amp;ssscid=&amp;hs=240&amp;myty=sscID&amp;sb=&amp;sbkey=&amp;colco=&amp;rowPerPage=32&amp;showPage=&amp;ob=rank&amp;sor=DESC&amp;pid=18097"><img src="images/neweid-7.jpg" width="155" height="260" border="0"></a></div>
  
  <div style="width:485px; height:25px;   border:0px;  float:left;" align="center">
   <div style="width:6px; height: 25px; float:left "></div>
@@ -371,7 +371,7 @@ swfobject.registerObject("FlashID");
 <div style=" width:6px;="" height:25px;="" float:left";=""><span style="float:left; width:164px;"><img src="images/cont.jpg" width="149" height="103"></span></div>
 <div style="width:6px; height: 25px; float:left "><span class="con_big" style="float:left; width:270px; height:80px; text-align:center; padding-top:10px">Call: 8802 8900144 <br>
   01731515372, 01714091656<br>
-USA: 1-562-298-6383</span></div>
+</span></div>
 </div>
 </div></div>
 
