--- a/c/ce/cen/centerforinquiry.net.html
+++ b/c/ce/cen/centerforinquiry.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the centerforinquiry.net privacy policy that was archived on 2013-05-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130510074109id_/http%3A//centerforinquiry.net/legal/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the centerforinquiry.net privacy policy that was archived on 2013-12-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131221025330id_/http%3A//www.centerforinquiry.net/legal/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" xmlns:og="http://ogp.me/ns#" xmlns:fb="https://www.facebook.com/2008/fbml"><head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -195,7 +195,7 @@ We may provide a small data file called a "cookie" which is stored on your compu
 </p>
 <h3>Questions</h3>
 <p>
-If you have any questions about this Privacy Policy, the practices of this Web site, or your dealings with this Web site, please direct your questions by mail to: 3965 Rensch Rd. Amherst, NY 14228. You may also send an email to <span id="eeEncEmail_rF20aG66GS"><a href="mailto:info@centerforinquiry.net">info [at] centerforinquiry.net</a></span><script type="text/javascript">
+If you have any questions about this Privacy Policy, the practices of this Web site, or your dealings with this Web site, please direct your questions by mail to: 3965 Rensch Rd. Amherst, NY 14228. You may also send an email to <span id="eeEncEmail_Cbk9G00wRU"><a href="mailto:info@centerforinquiry.net">info [at] centerforinquiry.net</a></span><script type="text/javascript">
 //<![CDATA[
 var l=new Array();
 var output = '';
@@ -204,7 +204,7 @@ for (var i = l.length-1; i >= 0; i=i-1){
 if (l[i].substring(0, 1) == ' ') output += "&#"+unescape(l[i].substring(1))+";"; 
 else output += unescape(l[i]);
 }
-document.getElementById('eeEncEmail_rF20aG66GS').innerHTML = output;
+document.getElementById('eeEncEmail_Cbk9G00wRU').innerHTML = output;
 //]]>
 </script>; please reference this Privacy Policy in your subject line.
 </p>
