filesquick.com (archived on 2013-12-21)
{
  "alexa_rank": 778225,
  "analysis_subcorpus": false,
  "categories": "adult;entertainment",
  "char_count": 5805,
  "classifier_probability": 0.94,
  "cross_domain_homepage_redir": true,
  "flesch_ease": null,
  "flesch_kincaid": NaN,
  "homepage_snapshot_redirected_domain": "masaladesi.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20131021035847id_/http://www.masaladesi.com/forumdisplay.php?f=2",
  "homepage_snapshot_url": "https://web.archive.org/web/20131004144842id_/http%3A//filesquick.com",
  "interval": "2013_B",
  "link_text": "Privacy Statement",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "xb-wiki.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131221034224id_/http%3A//www.xb-wiki.com/index.php/Privacy_policy",
  "policy_title": "Privacy policy - Xb",
  "policy_url": "xb-wiki.com/index.php/Privacy_policy",
  "sha1": "35005beedd5d9ba6b3d0ac35d05649dd7f303e85",
  "simhash": 1956563627951876724,
  "simhash_updated": true,
  "site_hostname": "filesquick.com",
  "site_url": "http://filesquick.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20131221034224",
  "word_count": 976,
  "year": 2013
}

--- a/f/fi/fil/filesquick.com.html
+++ b/f/fi/fil/filesquick.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the filesquick.com privacy policy that was archived on 2013-06-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130628090734id_/http%3A//www.xb-wiki.com/index.php/Privacy_policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the filesquick.com privacy policy that was archived on 2013-12-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131221034224id_/http%3A//www.xb-wiki.com/index.php/Privacy_policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en" dir="ltr" class="client-nojs"><head>
 <title>Privacy policy - Xb</title>
@@ -21,7 +21,7 @@
 </style>
 <script src="/load.php?debug=false&amp;lang=en&amp;modules=startup&amp;only=scripts&amp;skin=monobook&amp;*"></script>
 <script>if(window.mw){
-	mw.config.set({"wgCanonicalNamespace": "", "wgCanonicalSpecialPageName": false, "wgNamespaceNumber": 0, "wgPageName": "Privacy_policy", "wgTitle": "Privacy policy", "wgCurRevisionId": 2559, "wgArticleId": 1529, "wgIsArticle": true, "wgAction": "view", "wgUserName": null, "wgUserGroups": ["*"], "wgCategories": [], "wgBreakFrames": false, "wgRestrictionEdit": [], "wgRestrictionMove": []});
+	mw.config.set({"wgCanonicalNamespace": "", "wgCanonicalSpecialPageName": false, "wgNamespaceNumber": 0, "wgPageName": "Privacy_policy", "wgTitle": "Privacy policy", "wgCurRevisionId": 3153, "wgArticleId": 1529, "wgIsArticle": true, "wgAction": "view", "wgUserName": null, "wgUserGroups": ["*"], "wgCategories": [], "wgBreakFrames": false, "wgRestrictionEdit": [], "wgRestrictionMove": []});
 }
 </script><script>if(window.mw){
 	mw.loader.load(["mediawiki.page.startup"]);
@@ -46,35 +46,35 @@
 <div style="background-color:#e1e1e2; padding: 4px; margin: 4px; border: 1px dashed black;">
 <h2 style="background-color:#cee0f2; border-bottom:0px; border: 1px solid #a3b1bf; text-align:center; padding-top:4px;"> <span class="mw-headline" id="Privacy_policy">Privacy policy</span></h2>
 <ul><li>We do not and will not disclose members' information to any outside person or agency for any purpose whatsoever. The only exception to this is if we are officially requested by a government or law enforcement agency, or by other agency empowered by law to access the information.
-</li><li>Your privacy is of the utmost importance to eXBii.com and its sister sites. Because we ask for some basic personal information during registration, we want you to be fully informed of how this information is gathered and used.
+</li><li>Your privacy is of the utmost importance to Xossip.com and its sister sites. Because we ask for some basic personal information during registration, we want you to be fully informed of how this information is gathered and used.
 </li></ul>
 </div>
 </td></tr></tbody></table>
 <p><br>
 </p>
 <h2> <span class="mw-headline" id="Registration">Registration</span></h2>
-<p>Some basic personal information is required in order to register with eXBii.com and its sister sites. 
+<p>Some basic personal information is required in order to register with Xossip.com and its sister sites. 
 </p>
 <ul><li><b>Email Address</b> - This is essential and your primary unique identifier at this message board. Your account will be activated only after you confirm the validity of the provided e-mail address. Also, you can receive other important messages via your email account. Message board notifications, personalized newsletters, and messages sent to you by other members rely on the email address you provide when you register.
 </li><li><b>User Name</b> - This is how you are identified when you participate in forums. While many other aspects of your account can be updated regularly, your user name cannot be changed. You do not have to provide your real name, this can be any name not yet in use at the board.
 </li></ul>
 <h2> <span class="mw-headline" id="Demographic_Information">Demographic Information</span></h2>
-<ul><li>When you register, you are asked to give demographic information (like birth year, occupation, and gender). We ask you to tell us a little about yourself so we can better understand the types of people who register. This information can also be used to provide you with content that may be of interest to you, and to show you advertisements that are relevant to your demographic information. eXBii.com and its sister sites uses outside ad companies to display ads on its sites. We do not offer any information about our members to these or other entities. The ads are based only on content of the message board, and not on user info. These ads may contain cookies. While eXBii.com and its sister sites uses cookies for normal running of the board, the ad companies may also use cookies with the ads displayed, and eXBii.com and its sister sites does not have access to this information.
+<ul><li>When you register, you are asked to give demographic information (like birth year, occupation, and gender). We ask you to tell us a little about yourself so we can better understand the types of people who register. This information can also be used to provide you with content that may be of interest to you, and to show you advertisements that are relevant to your demographic information. Xossip.com and its sister sites uses outside ad companies to display ads on its sites. We do not offer any information about our members to these or other entities. The ads are based only on content of the message board, and not on user info. These ads may contain cookies. While Xossip.com and its sister sites uses cookies for normal running of the board, the ad companies may also use cookies with the ads displayed, and Xossip.com and its sister sites does not have access to this information.
 </li></ul>
 <h2> <span class="mw-headline" id="Participation">Participation</span></h2>
-<ul><li>The above describes information that is provided "actively" - meaning, you choose to submit this information to us when you join eXBii.com and its sister sites, or update your account at any point after having joined. Some other information is provided "passively" - meaning, that eXBii.com and its sister sites obtains this information when you login to your eXBii.com and its sister sites account and use the service. This is done primarily through the use of "cookies." Cookies are used on eXBii.com and its sister sites to verify your login information, and to optionally store your password in your browser so that you do not need to type it in each time you visit. Any time that you point your browser to a 'members-only' area, eXBii.com and its sister sites checks your browser's cookie file to see if you have already logged in, and if you have, you're taken right to the page that you have requested. If not, you'll be directed to the eXBii.com and its sister sites login screen, where you can quickly and easily login to your account, or signup for eXBii.com and its sister sites if you are not yet a member. Cookies are also used in conjunction with some ad banners to determine their effectiveness.
+<ul><li>The above describes information that is provided "actively" - meaning, you choose to submit this information to us when you join Xossip.com and its sister sites, or update your account at any point after having joined. Some other information is provided "passively" - meaning, that Xossip.com and its sister sites obtains this information when you login to your Xossip.com and its sister sites account and use the service. This is done primarily through the use of "cookies." Cookies are used on Xossip.com and its sister sites to verify your login information, and to optionally store your password in your browser so that you do not need to type it in each time you visit. Any time that you point your browser to a 'members-only' area, Xossip.com and its sister sites checks your browser's cookie file to see if you have already logged in, and if you have, you're taken right to the page that you have requested. If not, you'll be directed to the Xossip.com and its sister sites login screen, where you can quickly and easily login to your account, or signup for Xossip.com and its sister sites if you are not yet a member. Cookies are also used in conjunction with some ad banners to determine their effectiveness.
 </li></ul>
 <h2> <span class="mw-headline" id="Cookies">Cookies</span></h2>
-<ul><li>eXBii.com and its sister sites uses cookies to customize your experience while using the Forum. A cookie is a small text file that many Web sites write through your browser when you visit them. A cookie can only be read by the site that places it, so eXBii.com and its sister sites can't "see where you've been" based on any other cookies in your browser. Cookies are generally supported in version 3.0 and newer of Internet Explorer, 2.02 and newer of Netscape, and 3.0 and newer of AOL. Netscape Navigator uses a single file called "cookies.txt" to record all cookies, and you can open this file in any text editor to see what it looks like. On a Macintosh computer, the Netscape cookie file is called "MagicCookie". Internet Explorer uses a separate file for each cookie, which typically reside in "C:\Windows\Profiles\User\Cookies." Most browsers also allow the option of displaying a warning before accepting a cookie, or refusing all cookies. Declining cookies while participating in forums may result in some of features not working properly.
+<ul><li>Xossip.com and its sister sites uses cookies to customize your experience while using the Forum. A cookie is a small text file that many Web sites write through your browser when you visit them. A cookie can only be read by the site that places it, so Xossip.com and its sister sites can't "see where you've been" based on any other cookies in your browser. Cookies are generally supported in version 3.0 and newer of Internet Explorer, 2.02 and newer of Netscape, and 3.0 and newer of AOL. Netscape Navigator uses a single file called "cookies.txt" to record all cookies, and you can open this file in any text editor to see what it looks like. On a Macintosh computer, the Netscape cookie file is called "MagicCookie". Internet Explorer uses a separate file for each cookie, which typically reside in "C:\Windows\Profiles\User\Cookies." Most browsers also allow the option of displaying a warning before accepting a cookie, or refusing all cookies. Declining cookies while participating in forums may result in some of features not working properly.
 </li></ul>
 <h2> <span class="mw-headline" id="Public_Forum">Public Forum</span></h2>
-<ul><li>eXBii.com and its sister sites is a public forum and is accessible to all. Please remember that any information that is disclosed in public forums becomes public information. You should exercise caution when deciding to disclose your personal information.
+<ul><li>Xossip.com and its sister sites is a public forum and is accessible to all. Please remember that any information that is disclosed in public forums becomes public information. You should exercise caution when deciding to disclose your personal information.
 </li></ul>
 <h2> <span class="mw-headline" id="Security">Security</span></h2>
-<ul><li>eXBii.com and its sister sites has security measures in place to protect the loss, misuse and alteration of the information under its control. eXBii.com and its sister sites servers have strict security in place to prevent an intruder from retrieving personal information about its users.
+<ul><li>Xossip.com and its sister sites has security measures in place to protect the loss, misuse and alteration of the information under its control. Xossip.com and its sister sites servers have strict security in place to prevent an intruder from retrieving personal information about its users.
 </li></ul>
 <h2> <span class="mw-headline" id="Summary">Summary</span></h2>
-<ul><li>In this electronic era, when personal information can easily be obtained through various sources, eXBii.com and its sister sites appreciates the sensitivity of any private information that you disclose to us. It is our intention to treat your account information with the highest level of care.
+<ul><li>In this electronic era, when personal information can easily be obtained through various sources, Xossip.com and its sister sites appreciates the sensitivity of any private information that you disclose to us. It is our intention to treat your account information with the highest level of care.
 </li><li><b>We do not and will not disclose members' information to any outside person or agency for any purpose whatsoever. The only exception to this is if we are officially requested by a government or law enforcement agency, or by other agency empowered by law to access the information.</b>
 </li></ul>
 
@@ -86,9 +86,9 @@ Template argument size: 0/2097152 bytes
 Expensive parser function count: 0/100
 -->
 
-<!-- Saved in parser cache with key wiki:pcache:idhash:1529-0!*!*!!*!*!* and timestamp 20130628050224 -->
+<!-- Saved in parser cache with key wiki:pcache:idhash:1529-0!*!*!!*!*!* and timestamp 20131220202427 -->
 </div><div class="printfooter">
-Retrieved from "<a href="http://www.xb-wiki.com/index.php?title=Privacy_policy&amp;oldid=2559">http://www.xb-wiki.com/index.php?title=Privacy_policy&amp;oldid=2559</a>"</div>
+Retrieved from "<a href="http://www.xb-wiki.com/index.php?title=Privacy_policy&amp;oldid=3153">http://www.xb-wiki.com/index.php?title=Privacy_policy&amp;oldid=3153</a>"</div>
 		<div id="catlinks" class="catlinks catlinks-allhidden"></div>		<!-- end content -->
 				<div class="visualClear"></div>
 	</div>
@@ -161,7 +161,7 @@ You can view its source [e]" accesskey="e">View source</a></li>
 				<li id="t-recentchangeslinked"><a href="/index.php/Special:RecentChangesLinked/Privacy_policy" title="Recent changes in pages linked from this page [k]" accesskey="k">Related changes</a></li>
 				<li id="t-specialpages"><a href="/index.php/Special:SpecialPages" title="A list of all special pages [q]" accesskey="q">Special pages</a></li>
 				<li><a href="/index.php?title=Privacy_policy&amp;printable=yes" rel="alternate">Printable version</a></li>
-				<li id="t-permalink"><a href="/index.php?title=Privacy_policy&amp;oldid=2559" title="Permanent link to this revision of the page">Permanent link</a></li>
+				<li id="t-permalink"><a href="/index.php?title=Privacy_policy&amp;oldid=3153" title="Permanent link to this revision of the page">Permanent link</a></li>
 			</ul>
 		</div>
 	</div>
@@ -172,8 +172,8 @@ You can view its source [e]" accesskey="e">View source</a></li>
 		<a href="http://www.mediawiki.org/"><img src="/skins/common/images/poweredby_mediawiki_88x31.png" alt="Powered by MediaWiki" width="88" height="31"></a>
 	</div>
 	<ul id="f-list">
-		<li id="lastmod"> This page was last modified on 23 October 2008, at 20:03.</li>
-		<li id="viewcount">This page has been accessed 430,528 times.</li>
+		<li id="lastmod"> This page was last modified on 23 August 2013, at 15:41.</li>
+		<li id="viewcount">This page has been accessed 486,197 times.</li>
 		<li id="privacy"><a href="/index.php/Xb:Privacy_policy" title="Xb:Privacy policy">Privacy policy</a></li>
 		<li id="about"><a href="/index.php/Xb:About" title="Xb:About">About Xb</a></li>
 		<li id="disclaimer"><a href="/index.php/Xb:General_disclaimer" title="Xb:General disclaimer">Disclaimers</a></li>
@@ -191,4 +191,4 @@ You can view its source [e]" accesskey="e">View source</a></li>
 	
 	/* cache key: wiki:resourceloader:filter:minify-js:4:99acc2c3ab516bb21085c70c2195f3df */
 }
-</script><!-- Served in 0.021 secs. --></body></html>
+</script><!-- Served in 0.019 secs. --></body></html>
